1999-03-02  Dan Espen  <dane@mk.bellcore.com>

	* fvwm/fvwm2.1: Changed fvwm to fvwm2 everywhere I thought it should
	be changed.

1999-03-02  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/fvwm2.1: details about the geometry displayed
	in window lists.

	* fvwm/windows.c (do_windowList): show layer in window list.

	* fvwm/builtins.c (Maximize): 
	(WindowShade): allow shading maximized/maximizing shaded windows.
        * fvwm/fvwm.h (FvwmWindow): new field maximized_ht.
	* fvwm/add_window.c (AddWindow): initialize maximized_ht.
	* fvwm/session.c (SaveWindowStates): save the correct maximized
	size for shaded windows.
	* fvwm/events.c (HandleConfigureRequest): allow clients
	to resize themself if shaded, but not if maximized.
	* fvwm/resize.c (resize_window): allow interactive resizing
	if shaded.
	* fvwm/fvwm2.1: adjust documentation of WindowShade.

	* fvwm/builtins.c (PickFunc): 
	(AllFunc): new functions.

	* fvwm/parse.h: 
	* fvwm/misc.h: 
	* fvwm/functions.c (func_config): add entries for Pick and All.
	
	* fvwm/session.c (SaveWindowStates): 
	* fvwm/add_window.c (AddWindow): 
	* fvwm/move.c (AnimatedMoveAnyWindow): 
	(moveLoop): insert #ifdef WINDOWSHADE ... #endif to
	make configure --disable-windowshade work.

1999-03-02  Dan Espen  <dane@mk.bellcore.com>

	* NEWS: Updated news on FvwmAnimate fonts and colors defaults.

1999-03-01  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/fvwm.c (InitVariables): Change the default layers
	for StaysOnTop and StaysPut from 1 and 0 to 6 and 4.

	* fvwm/fvwm2.1: Adjust the documentation of DefaultLayers.
	
	* fvwm/add_window.c (AddWindow): Put windows at the top of
	their layer initially. 

1999-03-01 Hippo

	* fvwm/*: Removed ->bw. FvwmBorder windows will look funny until I fix
	them.
	
	* fvwm/move.c: Fixed opaque/animated moves to not crash shaded windows,
	removed	#ifndef NO_ETERM_SUPPORT, might want to make it a configure option.
