@@ -19,5 +19,5 @@ config_DATA = .FormFvwmCapture .FormFvwmRlogin .FormFvwmQuitVerify
 LDADD = -L$(top_builddir)/libs -lfvwm $(xpm_LIBS)  \
     $(X_LIBS) $(X_PRE_LIBS) -lXext -lX11 $(X_EXTRA_LIBS)
 
-INCLUDES = -I$(top_srcdir)/libs $(X_CFLAGS) $(xpm_CFLAGS)
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/libs $(X_CFLAGS) $(xpm_CFLAGS)
 
