@@ -1,3 +1,13 @@
+1999-03-02  Steven Michael ROBBINS  <stever@hojpoj.cs.mcgill.ca>
+
+	* FvwmPager/x_pager.c (GetBalloonLabel): add empty statement to
+	the default case of switch in order to placate SGI's cc.
+
+	* FvwmForm/DefineMe.c (CMD0V): added line continuation characters,
+	otherwise it appears to be unterminated character string to SGI's cc.
+
+	* FvwmForm/FvwmForm.h: fix the header exclusion ifdef.
+
 1999-03-01  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>
 
 	* FvwmForm/Makefile.am (configdir): install the data files into
